[gd_scene load_steps=10 format=3 uid="uid://c7l0vuoyjmof2"]

[ext_resource type="Script" path="res://MEM/scenes/TtlMEMGameScreen/TtlMEMGameScreen.gd" id="1_afykk"]
[ext_resource type="LabelSettings" uid="uid://ckdxb30guo6et" path="res://MEM/assets/fonts/GM_32_Black.tres" id="1_fphpm"]
[ext_resource type="Texture2D" uid="uid://borf88u80e6p2" path="res://MEM/assets/ui/blue_button00.png" id="2_b232k"]
[ext_resource type="PackedScene" uid="uid://c5m4ijnrxr5qr" path="res://MEM/scenes/TtlMEMMemoryTile/TtlMEMMemoryTile.tscn" id="2_yj05h"]
[ext_resource type="Texture2D" uid="uid://ctm46ukjvgvpf" path="res://MEM/assets/ui/yellow_button00.png" id="3_342wt"]
[ext_resource type="Texture2D" uid="uid://ddrdoxpexlu1h" path="res://MEM/assets/ui/green_button00.png" id="4_vhvew"]
[ext_resource type="LabelSettings" uid="uid://dur2qotxfwrfk" path="res://MEM/assets/fonts/GM_32_White.tres" id="5_okvmn"]
[ext_resource type="PackedScene" uid="uid://c818x1w7m4rmk" path="res://MEM/scenes/TtlMEMScorer/TtlMEMScorer.tscn" id="8_oxnwi"]
[ext_resource type="PackedScene" uid="uid://bgqbc5bye7nkd" path="res://MEM/scenes/TtlMEMGameOver/TtlMEMGameOver.tscn" id="9_e4boj"]

[node name="TtlMemGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afykk")
m_oSceneMemoryTile = ExtResource("2_yj05h")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC1" type="MarginContainer" parent="HB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TileContainer" type="GridContainer" parent="HB/MC1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MC2" type="MarginContainer" parent="HB"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_right = 18

[node name="VB" type="VBoxContainer" parent="HB/MC2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="HB" type="HBoxContainer" parent="HB/MC2/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC2/VB/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves:"
label_settings = ExtResource("1_fphpm")
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="HB/MC2/VB/HB"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_fphpm")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HB2" type="HBoxContainer" parent="HB/MC2/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC2/VB/HB2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs:"
label_settings = ExtResource("1_fphpm")
vertical_alignment = 1

[node name="PairsLabel" type="Label" parent="HB/MC2/VB/HB2"]
layout_mode = 2
text = "0/00"
label_settings = ExtResource("1_fphpm")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spacer" type="Control" parent="HB/MC2/VB"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HB/MC2/VB"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_b232k")
texture_pressed = ExtResource("3_342wt")
texture_hover = ExtResource("4_vhvew")

[node name="Label" type="Label" parent="HB/MC2/VB/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit
"
label_settings = ExtResource("5_okvmn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="AudioStreamPlayer" parent="."]

[node name="TtlMemScorer" parent="." instance=ExtResource("8_oxnwi")]

[node name="TtlMemGameOver" parent="." instance=ExtResource("9_e4boj")]
visible = false
layout_mode = 1

[connection signal="pressed" from="HB/MC2/VB/ExitButton" to="." method="_on_exit_button_pressed"]
